# bitask

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: command.rs  db.rs  lib.rs
tests/: benchmark_tests.rs  integration_tests.rs  process_safety_tests.rs  thread_safety_tests.rs
