[package]
name = "bitask"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitask"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
crc32fast = "1.4.2"
env_logger = "0.11.6"
fs2 = "0.4.3"
log = "0.4.25"
thiserror = "2.0.11"

[dev-dependencies]
tempfile = "3.15.0"
